adds meta tags and updates readme

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,18 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="Team Shirts Euro 2020">
+    <meta property="og:description" content="Home shirts and info for all 24 competing nations in Euro 2020.">
+    <meta property="og:image" content="https://pcsandford.github.io/euro-2020-shirts/thumbnail.jpg">
+    <meta property="og:url" content="https://pcsandford.github.io/euro-2020-shirts">
+
+    <meta name="twitter:title" content="Euro 2020 Team Shirts">
+    <meta name="twitter:description" content="Home shirts and info for all 24 competing nations in Euro 2020.">
+    <meta name="twitter:image" content="https://pcsandford.github.io/euro-2020-shirts/thumbnail.jpg">
+    <meta name="twitter:card" content="Euro 2020 Team Shirts">  
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site created to show all 24 teams shirt designs using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
