--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="twitter:title" content="Euro 2020 Team Shirts">
     <meta name="twitter:description" content="Home shirts and info for all 24 competing nations in Euro 2020.">
     <meta name="twitter:image" content="https://pcsandford.github.io/euro-2020-shirts/thumbnail.jpg">
-    <meta name="twitter:card" content="Euro 2020 Team Shirts">  
+    <meta name="twitter:card" content="summary_large_image">  
     <meta
       name="description"
       content="Web site created to show all 24 teams shirt designs using create-react-app"
